<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".MatkulActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editTextMatkul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nama_matkul"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editTextSks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/sks"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonMatkul"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

    <Button
        android:id="@+id/buttonLihatMatkul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_matkul"/>

    <Button
        android:id="@+id/buttonLihat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginTop="126dp"
        android:background="@android:color/holo_blue_dark"
        app:menu="@menu/menu_bottom"
        />
</LinearLayout>